# Scrapegraph-ai

./: .env  README.md  pyproject.toml  requirements.txt
Basic/: Basic.py  prompt.py  web.py
Ebay/: Downloadcsv.py  Laptops.py  Mobilesbs4.py  data.py  details.py  ebay_mobiles.csv  lapt.py  link.py  mobiles.py
Flipkart/: Furniture.py  price.py
Jiomart/: Electronics.py  Electronicsbs4.py  Stationary.py  jio.py  jiostationary.py
Meesho/: Clothes.py  Ethnicwearbs4.py  m.py  meeshodb.py
Snapdeal/: Beauty.py  Electronics.py  Electronicsbs4.py  Kidstoyselenium.py  Sarees.py  Toys.py  gymproducts.py  headphones.py  homedecor.py  kitchen.py  kitchenproducts.py  menswear.py  snap.py  tablets.py  vehicles.py
myenv/: pyvenv.cfg
