[tool.poetry]
name = "scrapegraph-ai-project"
version = "0.1.0"
description = "A project for web scraping using ScrapeGraphAI"
authors = ["Sneha"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapegraphai = "1.25.1"
requests = "2.31.0"
beautifulsoup4 = "4.12.3"
lxml = "4.9.3"
pandas = "^2.2.2"
playwright = "^1.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
